# CAEN-scripts

./: CMakeLists.txt  README.md
include/: BoardDB.h  Errors.h  PMTBoardDB.h  TPCBoardDB.h  Utilities.h  Utils.h
scripts/: run_CAENA2795_Reset_all.sh  run_CAENA2795_Status_all.sh  run_CAENReset_all.sh  run_CAENStatus_all.sh  run_CAENV1730_Reset_all.sh  run_CAENV1730_Status_all.sh
src/: CAENA2795_BoardInfo.cc  CAENA2795_Reset.cc  CAENA2795_Status.cc  CAENBoardInfo.cc  CAENBridgeReset.cc  CAENClockOut.cc  CAENClockPhaseOut.cc  CAENReadRegister.cc  CAENReset.cc  CAENStatus.cc  CAENV1730_BoardInfo.cc  CAENV1730_ClockOut.cc  CAENV1730_ClockPhaseOut.cc  CAENV1730_ReadRegister.cc  CAENV1730_Reset.cc  CAENV1730_Status.cc  CAENVME_BridgeReset.cc
